tests/positive/BuiltinsMultiOpenImport/Input.juvix
module Input;

open import A;
open import Nat;

end;
