tests/negative/StdlibConflict/Input.juvix
module Input;

open import Stdlib.Data.Bool;

end;
